# Is-a-banana

./: LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml
is_croissant.egg-info/: PKG-INFO  SOURCES.txt
src/isbanana/: index.py
src/isbanana.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/isbanana/static/: mainindex.css
src/static/: indexmain.js
src/templates/: indexmainmain.html
static/: index.css  index.js
templates/: index.html
