[project]
name = "isbanana"
version = "0.1.0"
description = "Are you a banana? Probably not. But you can check it out with this tool."
authors = [
    { name = "Lubaba Nawla", email = "lubabanawla@gmail.com" },
    { name = "Issac Liu", email = "issac@matchatea.dev" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
isbanana = "isbanana.main:main"
