[project]
name = "isbanana"
version = "0.1.0"
description = "Are you a banana? Probably not. But you can check it out with this tool."
authors = [
    { name = "Lubaba Nawla", email = "lubabanawla@gmail.com" },
    { name = "Issac Liu", email = "issac@matchatea.dev" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "blinker == 1.9.0",
    "click == 8.1.8",
    "cv == 1.0.0",
    "flask == 3.1.0",
    "itsdangerous == 2.2.0",
    "jinja2 == 3.1.6",
    "markupsafe == 3.0.2",
    "numpy == 2.2.3",
    "opencv-python == 4.11.0.86",
    "werkzeug == 3.1.3"
]

[project.scripts]
isbanana = "isbanana.main:main"
